--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+certifi==2020.12.5
+chardet==4.0.0
+cycler==0.10.0
 decorator==5.0.7
+idna==2.10
+kiwisolver==1.3.1
+lxml==4.6.3
+matplotlib==3.4.2
 numpy==1.20.3
 pandas==1.2.4
+Pillow==8.2.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.17.1
+pytrends==4.7.3
 pytz==2021.1
+requests==2.25.1
 self==2020.12.3
 six==1.16.0
+urllib3==1.26.4
